--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,18 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <string name="pref_username_title">Username</string>
+    <string name="pref_password_title">Password</string>
+    <string name="pref_url_title">URL</string>
+
+    <string name="pref_username_key">pref_user</string>
+    <string name="pref_password_key">pref_pass</string>
+    <string name="pref_url_key">pref_url</string>
+
+    <string name="pref_username_default">akarem</string>
+    <string name="pref_password_default">Abc12345</string>
+    <string name="pref_url_default">http://197.50.62.26:6060/</string>
 
 </resources>
