--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">AjmanInspector</string>
     <string name="action_settings">Settings</string>
+    <string name="action_print">Print</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -22,12 +23,41 @@
     <string name="pref_password_key">pref_pass</string>
     <string name="pref_url_key">pref_url</string>
 
-    <string name="pref_username_default">inspector1</string>
+    <string name="pref_username_default">Inspector1</string>
     <string name="pref_password_default">Abc12345</string>
-    <string name="pref_url_default">http://197.50.62.27:4040/Mobiletest/</string>
+    <!--<string name="pref_url_default">http://197.50.62.27:4040/Mobiletest/</string>-->
+    <string name="pref_url_default">http://197.50.62.26:8000/MobileTest</string>
+    <!--<string name="pref_url_default">http://197.50.62.27:4040/Mobiletest</string>-->
+    <string name="action_print_txt">Print Text</string>
     <array name="setting">
         <item>Setting</item>
         <item>Refresh</item>
     </array>
 
+    <string name="alert_dialog_no_bt">Cannot use this application without bluetooth.</string>
+    <string name="alert_dialog_yes">Yes</string>
+    <string name="alert_dialog_no">No</string>
+    <string name="alert_dialog_warning_title">Warning</string>
+    <string name="alert_dialog_ok">Ok</string>
+    <string name="alert_dialog_turn_on_bt">This application needs the Bluetooth. Do you want turn on?</string>
+
+    <string name="not_connected">You are not connected to a device</string>
+    <string name="title_connecting">connecting...</string>
+    <string name="title_connected_to">connected: </string>
+    <string name="title_not_connected">not connected</string>
+
+    <!--  DeviceListActivity -->
+    <string name="scanning">scanning for devices...</string>
+    <string name="select_device">select a device to connect</string>
+    <string name="none_paired">No devices have been paired</string>
+    <string name="none_found">No devices found</string>
+    <string name="title_paired_devices">Paired Devices</string>
+    <string name="title_other_devices">Other Available Devices</string>
+    <string name="button_scan">Scan for devices</string>
+
+    <!-- Options Menu -->
+    <string name="connect">Connect device</string>
+    <string name="disconnect">Disconnect device</string>
+    <string name="preferences">Preferences</string>
+    <string name="special_keys">Special keys</string>
 </resources>
