--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,10 +23,12 @@
     <string name="pref_password_key">pref_pass</string>
     <string name="pref_url_key">pref_url</string>
 
-    <string name="pref_username_default">Inspector1</string>
+    <string name="pref_username_default">Inspector3</string>
     <string name="pref_password_default">Abc12345</string>
     <!--<string name="pref_url_default">http://197.50.62.27:4040/Mobiletest/</string>-->
-    <string name="pref_url_default">http://197.50.62.26:8000/MobileTest</string>
+    <!--<string name="pref_url_default">http://197.50.62.26:8000/MobileTest</string>-->
+    <string name="pref_url_default">http://197.50.62.27:15100/MobileTest</string>
+
     <!--<string name="pref_url_default">http://197.50.62.27:4040/Mobiletest</string>-->
     <string name="action_print_txt">Print Text</string>
     <array name="setting">
